apps/guestbook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  namespace: default
  labels:
    app: guestbook
spec:
  type: ClusterIP
  selector:
    app: guestbook
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
